deploy/simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator
  namespace: battery

spec:
  replicas: 20

  selector:
    matchLabels:
      app: simulator

  template:
    metadata:
      labels:
        app: simulator

    spec:
      containers:
        - name: simulator

          image: battery-simulator:1.0

          imagePullPolicy: Never

          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"

            limits:
              memory: "128Mi"
              cpu: "250m"
