deploy/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: battery

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nats

  template:
    metadata:
      labels:
        app: nats

    spec:
      containers:
        - name: nats

          image: nats:latest

          ports:
            - containerPort: 4222

          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"

            limits:
              memory: "128Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: battery

spec:
  selector:
    app: nats

  ports:
    - port: 4222
      targetPort: 4222
