deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: battery-ingress
  namespace: battery

spec:
  ingressClassName: nginx

  rules:
    - host: battery.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: dashboard

                port:
                  number: 8082
